@@ -32,8 +32,8 @@ public final class HttpServerUtilities {
         for (String pair : pairs) {
             int idx = pair.indexOf("=");
             // Use URLDecoder to handle special characters and spaces
-            String key = URLDecoder.decode(pair.substring(0, idx), "UTF-8");
-            String value = URLDecoder.decode(pair.substring(idx + 1), "UTF-8");
+            String key = URLDecoder.decode(pair.substring(0, idx), StandardCharsets.UTF_8);
+            String value = URLDecoder.decode(pair.substring(idx + 1), StandardCharsets.UTF_8);
             queryParams.put(key, value);
         }
 
